tests/snapshots/tokenize__stdlib_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 6:1\nunsigned at 6:9\nlong at 6:18\nIdentifier(size_t) at 6:23\n; at 6:29\ntypedef at 9:1\nint at 9:9\nIdentifier(wchar_t) at 9:13\n; at 9:20\nstruct at 18:1\nIdentifier(div_struct) at 18:8\n{ at 18:19\nint at 19:5\nIdentifier(quot) at 19:9\n; at 19:13\nint at 20:5\nIdentifier(rem) at 20:9\n; at 20:12\n} at 21:1\n; at 21:2\ntypedef at 22:1\nstruct at 22:9\nIdentifier(div_struct) at 22:16\nIdentifier(div_t) at 22:27\n; at 22:32\nstruct at 24:1\nIdentifier(ldiv_struct) at 24:8\n{ at 24:20\nlong at 25:5\nIdentifier(quot) at 25:10\n; at 25:14\nlong at 26:5\nIdentifier(rem) at 26:10\n; at 26:13\n} at 27:1\n; at 27:2\ntypedef at 28:1\nstruct at 28:9\nIdentifier(ldiv_struct) at 28:16\nIdentifier(ldiv_t) at 28:28\n; at 28:34\nextern at 31:1\ndouble at 31:8\nIdentifier(atof) at 31:15\n( at 31:19\nconst at 31:20\nchar at 31:26\n* at 31:31\nIdentifier(nptr) at 31:32\n) at 31:36\n; at 31:37\nextern at 32:1\nint at 32:8\nIdentifier(atoi) at 32:12\n( at 32:16\nconst at 32:17\nchar at 32:23\n* at 32:28\nIdentifier(nptr) at 32:29\n) at 32:33\n; at 32:34\nextern at 33:1\nlong at 33:8\nIdentifier(atol) at 33:13\n( at 33:17\nconst at 33:18\nchar at 33:24\n* at 33:29\nIdentifier(nptr) at 33:30\n) at 33:34\n; at 33:35\nextern at 34:1\ndouble at 34:8\nIdentifier(strtod) at 34:15\n( at 34:21\nconst at 34:22\nchar at 34:28\n* at 34:33\nIdentifier(nptr) at 34:34\n, at 34:38\nchar at 34:40\n* at 34:45\n* at 34:46\nIdentifier(endptr) at 34:47\n) at 34:53\n; at 34:54\nextern at 35:1\nlong at 35:8\nIdentifier(strtol) at 35:13\n( at 35:19\nconst at 35:20\nchar at 35:26\n* at 35:31\nIdentifier(nptr) at 35:32\n, at 35:36\nchar at 35:38\n* at 35:43\n* at 35:44\nIdentifier(endptr) at 35:45\n, at 35:51\nint at 35:53\nIdentifier(base) at 35:57\n) at 35:61\n; at 35:62\nextern at 36:1\nunsigned at 36:8\nlong at 36:17\nIdentifier(strtoul) at 36:22\n( at 36:29\nconst at 36:30\nchar at 36:36\n* at 36:41\nIdentifier(nptr) at 36:42\n, at 36:46\nchar at 36:48\n* at 36:53\n* at 36:54\nIdentifier(endptr) at 36:55\n, at 36:61\nint at 36:63\nIdentifier(base) at 36:67\n) at 36:71\n; at 36:72\nextern at 39:1\nint at 39:8\nIdentifier(rand) at 39:12\n( at 39:16\nvoid at 39:17\n) at 39:21\n; at 39:22\nextern at 40:1\nvoid at 40:8\nIdentifier(srand) at 40:13\n( at 40:18\nunsigned at 40:19\nint at 40:28\nIdentifier(seed) at 40:32\n) at 40:36\n; at 40:37\nextern at 43:1\nvoid at 43:8\n* at 43:13\nIdentifier(calloc) at 43:14\n( at 43:20\nIdentifier(size_t) at 43:21\nIdentifier(nmemb) at 43:28\n, at 43:33\nIdentifier(size_t) at 43:35\nIdentifier(size) at 43:42\n) at 43:46\n; at 43:47\nextern at 44:1\nvoid at 44:8\n* at 44:13\nIdentifier(malloc) at 44:14\n( at 44:20\nIdentifier(size_t) at 44:21\nIdentifier(size) at 44:28\n) at 44:32\n; at 44:33\nextern at 45:1\nvoid at 45:8\n* at 45:13\nIdentifier(realloc) at 45:14\n( at 45:21\nvoid at 45:22\n* at 45:27\nIdentifier(ptr) at 45:28\n, at 45:31\nIdentifier(size_t) at 45:33\nIdentifier(size) at 45:40\n) at 45:44\n; at 45:45\nextern at 46:1\nvoid at 46:8\nIdentifier(free) at 46:13\n( at 46:17\nvoid at 46:18\n* at 46:23\nIdentifier(ptr) at 46:24\n) at 46:27\n; at 46:28\nextern at 49:1\nvoid at 49:8\nIdentifier(abort) at 49:13\n( at 49:18\nvoid at 49:19\n) at 49:23\n; at 49:24\nextern at 50:1\nint at 50:8\nIdentifier(atexit) at 50:12\n( at 50:18\nvoid at 50:19\n( at 50:24\n* at 50:25\nIdentifier(func) at 50:26\n) at 50:30\n( at 50:31\nvoid at 50:32\n) at 50:36\n) at 50:37\n; at 50:38\nextern at 51:1\nvoid at 51:8\nIdentifier(exit) at 51:13\n( at 51:17\nint at 51:18\nIdentifier(status) at 51:22\n) at 51:28\n; at 51:29\nextern at 52:1\nchar at 52:8\n* at 52:13\nIdentifier(getenv) at 52:14\n( at 52:20\nconst at 52:21\nchar at 52:27\n* at 52:32\nIdentifier(name) at 52:33\n) at 52:37\n; at 52:38\nextern at 53:1\nint at 53:8\nIdentifier(system) at 53:12\n( at 53:18\nconst at 53:19\nchar at 53:25\n* at 53:30\nIdentifier(string) at 53:31\n) at 53:37\n; at 53:38\nextern at 56:1\nvoid at 56:8\n* at 56:13\nIdentifier(bsearch) at 56:14\n( at 56:21\nconst at 56:22\nvoid at 56:28\n* at 56:33\nIdentifier(key) at 56:34\n, at 56:37\nconst at 56:39\nvoid at 56:45\n* at 56:50\nIdentifier(base) at 56:51\n, at 56:55\nIdentifier(size_t) at 56:57\nIdentifier(nmemb) at 56:64\n, at 56:69\nIdentifier(size_t) at 56:71\nIdentifier(size) at 56:78\n, at 56:82\nint at 57:22\n( at 57:26\n* at 57:27\nIdentifier(compar) at 57:28\n) at 57:34\n( at 57:35\nconst at 57:36\nvoid at 57:42\n* at 57:47\n, at 57:48\nconst at 57:50\nvoid at 57:56\n* at 57:61\n) at 57:62\n) at 57:63\n; at 57:64\nextern at 58:1\nvoid at 58:8\nIdentifier(qsort) at 58:13\n( at 58:18\nvoid at 58:19\n* at 58:24\nIdentifier(base) at 58:25\n, at 58:29\nIdentifier(size_t) at 58:31\nIdentifier(nmemb) at 58:38\n, at 58:43\nIdentifier(size_t) at 58:45\nIdentifier(size) at 58:52\n, at 58:56\nint at 59:19\n( at 59:23\n* at 59:24\nIdentifier(compar) at 59:25\n) at 59:31\n( at 59:32\nconst at 59:33\nvoid at 59:39\n* at 59:44\n, at 59:45\nconst at 59:47\nvoid at 59:53\n* at 59:58\n) at 59:59\n) at 59:60\n; at 59:61\nextern at 62:1\nint at 62:8\nIdentifier(abs) at 62:12\n( at 62:15\nint at 62:16\nIdentifier(j) at 62:20\n) at 62:21\n; at 62:22\nextern at 63:1\nlong at 63:8\nIdentifier(labs) at 63:13\n( at 63:17\nlong at 63:18\nIdentifier(j) at 63:23\n) at 63:24\n; at 63:25\nextern at 64:1\nIdentifier(div_t) at 64:8\nIdentifier(div) at 64:14\n( at 64:17\nint at 64:18\nIdentifier(numer) at 64:22\n, at 64:27\nint at 64:29\nIdentifier(denom) at 64:33\n) at 64:38\n; at 64:39\nextern at 65:1\nIdentifier(ldiv_t) at 65:8\nIdentifier(ldiv) at 65:15\n( at 65:19\nlong at 65:20\nIdentifier(numer) at 65:25\n, at 65:30\nlong at 65:32\nIdentifier(denom) at 65:37\n) at 65:42\n; at 65:43\nextern at 68:1\nint at 68:8\nIdentifier(mblen) at 68:12\n( at 68:17\nconst at 68:18\nchar at 68:24\n* at 68:29\nIdentifier(s) at 68:30\n, at 68:31\nIdentifier(size_t) at 68:33\nIdentifier(n) at 68:40\n) at 68:41\n; at 68:42\nextern at 69:1\nint at 69:8\nIdentifier(mbtowc) at 69:12\n( at 69:18\nIdentifier(wchar_t) at 69:19\n* at 69:27\nIdentifier(pwc) at 69:28\n, at 69:31\nconst at 69:33\nchar at 69:39\n* at 69:44\nIdentifier(s) at 69:45\n, at 69:46\nIdentifier(size_t) at 69:48\nIdentifier(n) at 69:55\n) at 69:56\n; at 69:57\nextern at 70:1\nint at 70:8\nIdentifier(wctomb) at 70:12\n( at 70:18\nchar at 70:19\n* at 70:24\nIdentifier(s) at 70:25\n, at 70:26\nIdentifier(wchar_t) at 70:28\nIdentifier(wchar) at 70:36\n) at 70:41\n; at 70:42\nextern at 71:1\nIdentifier(size_t) at 71:8\nIdentifier(mbstowcs) at 71:15\n( at 71:23\nIdentifier(wchar_t) at 71:24\n* at 71:32\nIdentifier(pwcs) at 71:33\n, at 71:37\nconst at 71:39\nchar at 71:45\n* at 71:50\nIdentifier(s) at 71:51\n, at 71:52\nIdentifier(size_t) at 71:54\nIdentifier(n) at 71:61\n) at 71:62\n; at 71:63\nextern at 72:1\nIdentifier(size_t) at 72:8\nIdentifier(wcstombs) at 72:15\n( at 72:23\nchar at 72:24\n* at 72:29\nIdentifier(s) at 72:30\n, at 72:31\nconst at 72:33\nIdentifier(wchar_t) at 72:39\n* at 72:47\nIdentifier(pwcs) at 72:48\n, at 72:52\nIdentifier(size_t) at 72:54\nIdentifier(n) at 72:61\n) at 72:62\n; at 72:63\nint at 75:1\nIdentifier(main) at 75:5\n( at 75:9\n) at 75:10\n{ at 75:12\nint at 76:5\nIdentifier(result) at 76:9\n= at 76:16\nIntLiteral(0, None) at 76:18\n; at 76:19\nint at 79:5\nIdentifier(n) at 79:9\n= at 79:11\nIdentifier(atoi) at 79:13\n( at 79:17\nStringLiteral(\"123\") at 79:18\n) at 79:23\n; at 79:24\nif at 80:5\n( at 80:8\nIdentifier(n) at 80:9\n== at 80:11\nIntLiteral(123, None) at 80:14\n) at 80:17\n{ at 80:19\nIdentifier(result) at 81:9\n= at 81:16\nIdentifier(result) at 81:18\n+ at 81:25\nIntLiteral(1, None) at 81:27\n; at 81:28\n} at 82:5\nlong at 85:5\nIdentifier(ln) at 85:10\n= at 85:13\nIdentifier(atol) at 85:15\n( at 85:19\nStringLiteral(\"456\") at 85:20\n) at 85:25\n; at 85:26\nif at 86:5\n( at 86:8\nIdentifier(ln) at 86:9\n== at 86:12\nIntLiteral(456, None) at 86:15\n) at 86:18\n{ at 86:20\nIdentifier(result) at 87:9\n= at 87:16\nIdentifier(result) at 87:18\n+ at 87:25\nIntLiteral(1, None) at 87:27\n; at 87:28\n} at 88:5\nint at 91:5\nIdentifier(a) at 91:9\n= at 91:11\nIdentifier(abs) at 91:13\n( at 91:16\n- at 91:17\nIntLiteral(42, None) at 91:18\n) at 91:20\n; at 91:21\nif at 92:5\n( at 92:8\nIdentifier(a) at 92:9\n== at 92:11\nIntLiteral(42, None) at 92:14\n) at 92:16\n{ at 92:18\nIdentifier(result) at 93:9\n= at 93:16\nIdentifier(result) at 93:18\n+ at 93:25\nIntLiteral(1, None) at 93:27\n; at 93:28\n} at 94:5\nlong at 97:5\nIdentifier(la) at 97:10\n= at 97:13\nIdentifier(labs) at 97:15\n( at 97:19\n- at 97:20\nIntLiteral(100, None) at 97:21\n) at 97:24\n; at 97:25\nif at 98:5\n( at 98:8\nIdentifier(la) at 98:9\n== at 98:12\nIntLiteral(100, None) at 98:15\n) at 98:18\n{ at 98:20\nIdentifier(result) at 99:9\n= at 99:16\nIdentifier(result) at 99:18\n+ at 99:25\nIntLiteral(1, None) at 99:27\n; at 99:28\n} at 100:5\nif at 103:5\n( at 103:8\nIntLiteral(0, None) at 103:9\n== at 103:11\nIntLiteral(0, None) at 103:14\n) at 103:15\n{ at 103:17\nIdentifier(result) at 104:9\n= at 104:16\nIdentifier(result) at 104:18\n+ at 104:25\nIntLiteral(1, None) at 104:27\n; at 104:28\n} at 105:5\nif at 106:5\n( at 106:8\nIntLiteral(1, None) at 106:9\n== at 106:11\nIntLiteral(1, None) at 106:14\n) at 106:15\n{ at 106:17\nIdentifier(result) at 107:9\n= at 107:16\nIdentifier(result) at 107:18\n+ at 107:25\nIntLiteral(1, None) at 107:27\n; at 107:28\n} at 108:5\nreturn at 111:5\nIdentifier(result) at 111:12\n; at 111:18\n} at 112:1\nEOF at 113:1\n"
stderr: ""
status: 0
