tests/snapshots/tokenize__string_concatenation.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nchar at 4:5\n* at 4:10\nIdentifier(s1) at 4:11\n= at 4:14\nStringLiteral(\"hello\") at 4:16\nStringLiteral(\"world\") at 4:24\n; at 4:31\nchar at 7:5\n* at 7:10\nIdentifier(s2) at 7:11\n= at 7:14\nStringLiteral(\"foo\") at 7:16\nStringLiteral(\"bar\") at 7:24\n; at 7:29\nchar at 10:5\n* at 10:10\nIdentifier(s3) at 10:11\n= at 10:14\nStringLiteral(\"first\") at 10:16\nStringLiteral(\"second\") at 11:16\nStringLiteral(\"third\") at 12:16\n; at 12:23\nint at 16:5\nIdentifier(len1) at 16:9\n= at 16:14\nIntLiteral(0, None) at 16:16\n; at 16:17\nwhile at 17:5\n( at 17:11\nIdentifier(s1) at 17:12\n[ at 17:14\nIdentifier(len1) at 17:15\n] at 17:19\n!= at 17:21\nIntLiteral(0, None) at 17:24\n) at 17:25\n{ at 17:27\nIdentifier(len1) at 18:9\n= at 18:14\nIdentifier(len1) at 18:16\n+ at 18:21\nIntLiteral(1, None) at 18:23\n; at 18:24\n} at 19:5\nint at 22:5\nIdentifier(len2) at 22:9\n= at 22:14\nIntLiteral(0, None) at 22:16\n; at 22:17\nwhile at 23:5\n( at 23:11\nIdentifier(s2) at 23:12\n[ at 23:14\nIdentifier(len2) at 23:15\n] at 23:19\n!= at 23:21\nIntLiteral(0, None) at 23:24\n) at 23:25\n{ at 23:27\nIdentifier(len2) at 24:9\n= at 24:14\nIdentifier(len2) at 24:16\n+ at 24:21\nIntLiteral(1, None) at 24:23\n; at 24:24\n} at 25:5\nint at 28:5\nIdentifier(len3) at 28:9\n= at 28:14\nIntLiteral(0, None) at 28:16\n; at 28:17\nwhile at 29:5\n( at 29:11\nIdentifier(s3) at 29:12\n[ at 29:14\nIdentifier(len3) at 29:15\n] at 29:19\n!= at 29:21\nIntLiteral(0, None) at 29:24\n) at 29:25\n{ at 29:27\nIdentifier(len3) at 30:9\n= at 30:14\nIdentifier(len3) at 30:16\n+ at 30:21\nIntLiteral(1, None) at 30:23\n; at 30:24\n} at 31:5\nreturn at 34:5\nIdentifier(len1) at 34:12\n+ at 34:17\nIdentifier(len2) at 34:19\n+ at 34:24\nIdentifier(len3) at 34:26\n; at 34:30\n} at 35:1\nEOF at 36:1\n"
stderr: ""
status: 0
