tests/snapshots/tokenize__string_literal_multiple.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 4:1\nIdentifier(main) at 4:5\n( at 4:9\n) at 4:10\n{ at 4:12\nchar at 5:5\n* at 5:10\nIdentifier(s1) at 5:11\n= at 5:14\nStringLiteral(\"abc\") at 5:16\n; at 5:21\nchar at 6:5\n* at 6:10\nIdentifier(s2) at 6:11\n= at 6:14\nStringLiteral(\"def\") at 6:16\n; at 6:21\nchar at 7:5\n* at 7:10\nIdentifier(s3) at 7:11\n= at 7:14\nStringLiteral(\"ghi\") at 7:16\n; at 7:21\nreturn at 13:5\nIdentifier(s1) at 13:12\n[ at 13:14\nIntLiteral(0) at 13:15\n] at 13:16\n+ at 13:18\nIdentifier(s2) at 13:20\n[ at 13:22\nIntLiteral(0) at 13:23\n] at 13:24\n; at 13:25\n} at 14:1\nEOF at 15:1\n"
stderr: ""
status: 0
