tests/snapshots/tokenize__string_literal_simple.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 4:1\nIdentifier(main) at 4:5\n( at 4:9\n) at 4:10\n{ at 4:12\nchar at 5:5\n* at 5:10\nIdentifier(str) at 5:11\n= at 5:15\nStringLiteral(\"hello\") at 5:17\n; at 5:24\nreturn at 6:5\nIdentifier(str) at 6:12\n[ at 6:15\nIntLiteral(0, None) at 6:16\n] at 6:17\n; at 6:18\n} at 7:1\nEOF at 8:1\n"
stderr: ""
status: 0
