tests/snapshots/tokenize__string_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 6:1\nunsigned at 6:9\nlong at 6:18\nIdentifier(size_t) at 6:23\n; at 6:29\nextern at 9:1\nvoid at 9:8\n* at 9:13\nIdentifier(memcpy) at 9:14\n( at 9:20\nvoid at 9:21\n* at 9:26\nIdentifier(dest) at 9:27\n, at 9:31\nconst at 9:33\nvoid at 9:39\n* at 9:44\nIdentifier(src) at 9:45\n, at 9:48\nIdentifier(size_t) at 9:50\nIdentifier(n) at 9:57\n) at 9:58\n; at 9:59\nextern at 10:1\nvoid at 10:8\n* at 10:13\nIdentifier(memmove) at 10:14\n( at 10:21\nvoid at 10:22\n* at 10:27\nIdentifier(dest) at 10:28\n, at 10:32\nconst at 10:34\nvoid at 10:40\n* at 10:45\nIdentifier(src) at 10:46\n, at 10:49\nIdentifier(size_t) at 10:51\nIdentifier(n) at 10:58\n) at 10:59\n; at 10:60\nextern at 11:1\nint at 11:8\nIdentifier(memcmp) at 11:12\n( at 11:18\nconst at 11:19\nvoid at 11:25\n* at 11:30\nIdentifier(s1) at 11:31\n, at 11:33\nconst at 11:35\nvoid at 11:41\n* at 11:46\nIdentifier(s2) at 11:47\n, at 11:49\nIdentifier(size_t) at 11:51\nIdentifier(n) at 11:58\n) at 11:59\n; at 11:60\nextern at 12:1\nvoid at 12:8\n* at 12:13\nIdentifier(memset) at 12:14\n( at 12:20\nvoid at 12:21\n* at 12:26\nIdentifier(s) at 12:27\n, at 12:28\nint at 12:30\nIdentifier(c) at 12:34\n, at 12:35\nIdentifier(size_t) at 12:37\nIdentifier(n) at 12:44\n) at 12:45\n; at 12:46\nextern at 13:1\nvoid at 13:8\n* at 13:13\nIdentifier(memchr) at 13:14\n( at 13:20\nconst at 13:21\nvoid at 13:27\n* at 13:32\nIdentifier(s) at 13:33\n, at 13:34\nint at 13:36\nIdentifier(c) at 13:40\n, at 13:41\nIdentifier(size_t) at 13:43\nIdentifier(n) at 13:50\n) at 13:51\n; at 13:52\nextern at 16:1\nchar at 16:8\n* at 16:13\nIdentifier(strcpy) at 16:14\n( at 16:20\nchar at 16:21\n* at 16:26\nIdentifier(dest) at 16:27\n, at 16:31\nconst at 16:33\nchar at 16:39\n* at 16:44\nIdentifier(src) at 16:45\n) at 16:48\n; at 16:49\nextern at 17:1\nchar at 17:8\n* at 17:13\nIdentifier(strncpy) at 17:14\n( at 17:21\nchar at 17:22\n* at 17:27\nIdentifier(dest) at 17:28\n, at 17:32\nconst at 17:34\nchar at 17:40\n* at 17:45\nIdentifier(src) at 17:46\n, at 17:49\nIdentifier(size_t) at 17:51\nIdentifier(n) at 17:58\n) at 17:59\n; at 17:60\nextern at 20:1\nchar at 20:8\n* at 20:13\nIdentifier(strcat) at 20:14\n( at 20:20\nchar at 20:21\n* at 20:26\nIdentifier(dest) at 20:27\n, at 20:31\nconst at 20:33\nchar at 20:39\n* at 20:44\nIdentifier(src) at 20:45\n) at 20:48\n; at 20:49\nextern at 21:1\nchar at 21:8\n* at 21:13\nIdentifier(strncat) at 21:14\n( at 21:21\nchar at 21:22\n* at 21:27\nIdentifier(dest) at 21:28\n, at 21:32\nconst at 21:34\nchar at 21:40\n* at 21:45\nIdentifier(src) at 21:46\n, at 21:49\nIdentifier(size_t) at 21:51\nIdentifier(n) at 21:58\n) at 21:59\n; at 21:60\nextern at 24:1\nint at 24:8\nIdentifier(strcmp) at 24:12\n( at 24:18\nconst at 24:19\nchar at 24:25\n* at 24:30\nIdentifier(s1) at 24:31\n, at 24:33\nconst at 24:35\nchar at 24:41\n* at 24:46\nIdentifier(s2) at 24:47\n) at 24:49\n; at 24:50\nextern at 25:1\nint at 25:8\nIdentifier(strncmp) at 25:12\n( at 25:19\nconst at 25:20\nchar at 25:26\n* at 25:31\nIdentifier(s1) at 25:32\n, at 25:34\nconst at 25:36\nchar at 25:42\n* at 25:47\nIdentifier(s2) at 25:48\n, at 25:50\nIdentifier(size_t) at 25:52\nIdentifier(n) at 25:59\n) at 25:60\n; at 25:61\nextern at 26:1\nint at 26:8\nIdentifier(strcoll) at 26:12\n( at 26:19\nconst at 26:20\nchar at 26:26\n* at 26:31\nIdentifier(s1) at 26:32\n, at 26:34\nconst at 26:36\nchar at 26:42\n* at 26:47\nIdentifier(s2) at 26:48\n) at 26:50\n; at 26:51\nextern at 27:1\nIdentifier(size_t) at 27:8\nIdentifier(strxfrm) at 27:15\n( at 27:22\nchar at 27:23\n* at 27:28\nIdentifier(dest) at 27:29\n, at 27:33\nconst at 27:35\nchar at 27:41\n* at 27:46\nIdentifier(src) at 27:47\n, at 27:50\nIdentifier(size_t) at 27:52\nIdentifier(n) at 27:59\n) at 27:60\n; at 27:61\nextern at 30:1\nchar at 30:8\n* at 30:13\nIdentifier(strchr) at 30:14\n( at 30:20\nconst at 30:21\nchar at 30:27\n* at 30:32\nIdentifier(s) at 30:33\n, at 30:34\nint at 30:36\nIdentifier(c) at 30:40\n) at 30:41\n; at 30:42\nextern at 31:1\nchar at 31:8\n* at 31:13\nIdentifier(strrchr) at 31:14\n( at 31:21\nconst at 31:22\nchar at 31:28\n* at 31:33\nIdentifier(s) at 31:34\n, at 31:35\nint at 31:37\nIdentifier(c) at 31:41\n) at 31:42\n; at 31:43\nextern at 32:1\nIdentifier(size_t) at 32:8\nIdentifier(strspn) at 32:15\n( at 32:21\nconst at 32:22\nchar at 32:28\n* at 32:33\nIdentifier(s) at 32:34\n, at 32:35\nconst at 32:37\nchar at 32:43\n* at 32:48\nIdentifier(accept) at 32:49\n) at 32:55\n; at 32:56\nextern at 33:1\nIdentifier(size_t) at 33:8\nIdentifier(strcspn) at 33:15\n( at 33:22\nconst at 33:23\nchar at 33:29\n* at 33:34\nIdentifier(s) at 33:35\n, at 33:36\nconst at 33:38\nchar at 33:44\n* at 33:49\nIdentifier(reject) at 33:50\n) at 33:56\n; at 33:57\nextern at 34:1\nchar at 34:8\n* at 34:13\nIdentifier(strpbrk) at 34:14\n( at 34:21\nconst at 34:22\nchar at 34:28\n* at 34:33\nIdentifier(s) at 34:34\n, at 34:35\nconst at 34:37\nchar at 34:43\n* at 34:48\nIdentifier(accept) at 34:49\n) at 34:55\n; at 34:56\nextern at 35:1\nchar at 35:8\n* at 35:13\nIdentifier(strstr) at 35:14\n( at 35:20\nconst at 35:21\nchar at 35:27\n* at 35:32\nIdentifier(haystack) at 35:33\n, at 35:41\nconst at 35:43\nchar at 35:49\n* at 35:54\nIdentifier(needle) at 35:55\n) at 35:61\n; at 35:62\nextern at 36:1\nchar at 36:8\n* at 36:13\nIdentifier(strtok) at 36:14\n( at 36:20\nchar at 36:21\n* at 36:26\nIdentifier(str) at 36:27\n, at 36:30\nconst at 36:32\nchar at 36:38\n* at 36:43\nIdentifier(delim) at 36:44\n) at 36:49\n; at 36:50\nextern at 39:1\nIdentifier(size_t) at 39:8\nIdentifier(strlen) at 39:15\n( at 39:21\nconst at 39:22\nchar at 39:28\n* at 39:33\nIdentifier(s) at 39:34\n) at 39:35\n; at 39:36\nextern at 40:1\nchar at 40:8\n* at 40:13\nIdentifier(strerror) at 40:14\n( at 40:22\nint at 40:23\nIdentifier(errnum) at 40:27\n) at 40:33\n; at 40:34\nint at 43:1\nIdentifier(main) at 43:5\n( at 43:9\n) at 43:10\n{ at 43:12\nint at 44:5\nIdentifier(result) at 44:9\n= at 44:16\nIntLiteral(0, None) at 44:18\n; at 44:19\nchar at 47:5\nIdentifier(str1) at 47:10\n[ at 47:14\n] at 47:15\n= at 47:17\nStringLiteral(\"hello\") at 47:19\n; at 47:26\nif at 48:5\n( at 48:8\nIdentifier(strlen) at 48:9\n( at 48:15\nIdentifier(str1) at 48:16\n) at 48:20\n== at 48:22\nIntLiteral(5, None) at 48:25\n) at 48:26\n{ at 48:28\nIdentifier(result) at 49:9\n= at 49:16\nIdentifier(result) at 49:18\n+ at 49:25\nIntLiteral(1, None) at 49:27\n; at 49:28\n} at 50:5\nchar at 53:5\nIdentifier(dest) at 53:10\n[ at 53:14\nIntLiteral(10, None) at 53:15\n] at 53:17\n; at 53:18\nIdentifier(strcpy) at 54:5\n( at 54:11\nIdentifier(dest) at 54:12\n, at 54:16\nStringLiteral(\"abc\") at 54:18\n) at 54:23\n; at 54:24\nif at 55:5\n( at 55:8\nIdentifier(dest) at 55:9\n[ at 55:13\nIntLiteral(0, None) at 55:14\n] at 55:15\n== at 55:17\nCharLiteral(97) at 55:20\n&& at 55:24\nIdentifier(dest) at 55:27\n[ at 55:31\nIntLiteral(1, None) at 55:32\n] at 55:33\n== at 55:35\nCharLiteral(98) at 55:38\n&& at 55:42\nIdentifier(dest) at 55:45\n[ at 55:49\nIntLiteral(2, None) at 55:50\n] at 55:51\n== at 55:53\nCharLiteral(99) at 55:56\n&& at 55:60\nIdentifier(dest) at 55:63\n[ at 55:67\nIntLiteral(3, None) at 55:68\n] at 55:69\n== at 55:71\nCharLiteral(0) at 55:74\n) at 55:78\n{ at 55:80\nIdentifier(result) at 56:9\n= at 56:16\nIdentifier(result) at 56:18\n+ at 56:25\nIntLiteral(1, None) at 56:27\n; at 56:28\n} at 57:5\nchar at 60:5\nIdentifier(buf) at 60:10\n[ at 60:13\nIntLiteral(20, None) at 60:14\n] at 60:16\n= at 60:18\nStringLiteral(\"foo\") at 60:20\n; at 60:25\nIdentifier(strcat) at 61:5\n( at 61:11\nIdentifier(buf) at 61:12\n, at 61:15\nStringLiteral(\"bar\") at 61:17\n) at 61:22\n; at 61:23\nif at 62:5\n( at 62:8\nIdentifier(buf) at 62:9\n[ at 62:12\nIntLiteral(0, None) at 62:13\n] at 62:14\n== at 62:16\nCharLiteral(102) at 62:19\n&& at 62:23\nIdentifier(buf) at 62:26\n[ at 62:29\nIntLiteral(3, None) at 62:30\n] at 62:31\n== at 62:33\nCharLiteral(98) at 62:36\n&& at 62:40\nIdentifier(buf) at 62:43\n[ at 62:46\nIntLiteral(5, None) at 62:47\n] at 62:48\n== at 62:50\nCharLiteral(114) at 62:53\n&& at 62:57\nIdentifier(buf) at 62:60\n[ at 62:63\nIntLiteral(6, None) at 62:64\n] at 62:65\n== at 62:67\nCharLiteral(0) at 62:70\n) at 62:74\n{ at 62:76\nIdentifier(result) at 63:9\n= at 63:16\nIdentifier(result) at 63:18\n+ at 63:25\nIntLiteral(1, None) at 63:27\n; at 63:28\n} at 64:5\nif at 67:5\n( at 67:8\nIdentifier(strcmp) at 67:9\n( at 67:15\nStringLiteral(\"abc\") at 67:16\n, at 67:21\nStringLiteral(\"abc\") at 67:23\n) at 67:28\n== at 67:30\nIntLiteral(0, None) at 67:33\n) at 67:34\n{ at 67:36\nIdentifier(result) at 68:9\n= at 68:16\nIdentifier(result) at 68:18\n+ at 68:25\nIntLiteral(1, None) at 68:27\n; at 68:28\n} at 69:5\nif at 70:5\n( at 70:8\nIdentifier(strcmp) at 70:9\n( at 70:15\nStringLiteral(\"abc\") at 70:16\n, at 70:21\nStringLiteral(\"abd\") at 70:23\n) at 70:28\n< at 70:30\nIntLiteral(0, None) at 70:32\n) at 70:33\n{ at 70:35\nIdentifier(result) at 71:9\n= at 71:16\nIdentifier(result) at 71:18\n+ at 71:25\nIntLiteral(1, None) at 71:27\n; at 71:28\n} at 72:5\nchar at 75:5\n* at 75:10\nIdentifier(p) at 75:11\n= at 75:13\nIdentifier(strchr) at 75:15\n( at 75:21\nStringLiteral(\"hello\") at 75:22\n, at 75:29\nCharLiteral(108) at 75:31\n) at 75:34\n; at 75:35\nif at 76:5\n( at 76:8\nIdentifier(p) at 76:9\n!= at 76:11\n( at 76:14\n( at 76:15\nvoid at 76:16\n* at 76:20\n) at 76:21\nIntLiteral(0, None) at 76:22\n) at 76:23\n&& at 76:25\n* at 76:28\nIdentifier(p) at 76:29\n== at 76:31\nCharLiteral(108) at 76:34\n) at 76:37\n{ at 76:39\nIdentifier(result) at 77:9\n= at 77:16\nIdentifier(result) at 77:18\n+ at 77:25\nIntLiteral(1, None) at 77:27\n; at 77:28\n} at 78:5\nchar at 81:5\nIdentifier(mem) at 81:10\n[ at 81:13\nIntLiteral(5, None) at 81:14\n] at 81:15\n; at 81:16\nIdentifier(memset) at 82:5\n( at 82:11\nIdentifier(mem) at 82:12\n, at 82:15\nCharLiteral(120) at 82:17\n, at 82:20\nIntLiteral(5, None) at 82:22\n) at 82:23\n; at 82:24\nif at 83:5\n( at 83:8\nIdentifier(mem) at 83:9\n[ at 83:12\nIntLiteral(0, None) at 83:13\n] at 83:14\n== at 83:16\nCharLiteral(120) at 83:19\n&& at 83:23\nIdentifier(mem) at 83:26\n[ at 83:29\nIntLiteral(4, None) at 83:30\n] at 83:31\n== at 83:33\nCharLiteral(120) at 83:36\n) at 83:39\n{ at 83:41\nIdentifier(result) at 84:9\n= at 84:16\nIdentifier(result) at 84:18\n+ at 84:25\nIntLiteral(1, None) at 84:27\n; at 84:28\n} at 85:5\nchar at 88:5\nIdentifier(src) at 88:10\n[ at 88:13\n] at 88:14\n= at 88:16\nStringLiteral(\"test\") at 88:18\n; at 88:24\nchar at 89:5\nIdentifier(dst) at 89:10\n[ at 89:13\nIntLiteral(5, None) at 89:14\n] at 89:15\n; at 89:16\nIdentifier(memcpy) at 90:5\n( at 90:11\nIdentifier(dst) at 90:12\n, at 90:15\nIdentifier(src) at 90:17\n, at 90:20\nIntLiteral(5, None) at 90:22\n) at 90:23\n; at 90:24\nif at 91:5\n( at 91:8\nIdentifier(dst) at 91:9\n[ at 91:12\nIntLiteral(0, None) at 91:13\n] at 91:14\n== at 91:16\nCharLiteral(116) at 91:19\n&& at 91:23\nIdentifier(dst) at 91:26\n[ at 91:29\nIntLiteral(3, None) at 91:30\n] at 91:31\n== at 91:33\nCharLiteral(116) at 91:36\n&& at 91:40\nIdentifier(dst) at 91:43\n[ at 91:46\nIntLiteral(4, None) at 91:47\n] at 91:48\n== at 91:50\nCharLiteral(0) at 91:53\n) at 91:57\n{ at 91:59\nIdentifier(result) at 92:9\n= at 92:16\nIdentifier(result) at 92:18\n+ at 92:25\nIntLiteral(1, None) at 92:27\n; at 92:28\n} at 93:5\nif at 96:5\n( at 96:8\nIdentifier(memcmp) at 96:9\n( at 96:15\nStringLiteral(\"abc\") at 96:16\n, at 96:21\nStringLiteral(\"abc\") at 96:23\n, at 96:28\nIntLiteral(3, None) at 96:30\n) at 96:31\n== at 96:33\nIntLiteral(0, None) at 96:36\n) at 96:37\n{ at 96:39\nIdentifier(result) at 97:9\n= at 97:16\nIdentifier(result) at 97:18\n+ at 97:25\nIntLiteral(1, None) at 97:27\n; at 97:28\n} at 98:5\nif at 99:5\n( at 99:8\nIdentifier(memcmp) at 99:9\n( at 99:15\nStringLiteral(\"abc\") at 99:16\n, at 99:21\nStringLiteral(\"abd\") at 99:23\n, at 99:28\nIntLiteral(3, None) at 99:30\n) at 99:31\n< at 99:33\nIntLiteral(0, None) at 99:35\n) at 99:36\n{ at 99:38\nIdentifier(result) at 100:9\n= at 100:16\nIdentifier(result) at 100:18\n+ at 100:25\nIntLiteral(1, None) at 100:27\n; at 100:28\n} at 101:5\nreturn at 104:5\nIdentifier(result) at 104:12\n; at 104:18\n} at 105:1\nEOF at 106:1\n"
stderr: ""
status: 0
