tests/snapshots/tokenize__stringification.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nchar at 7:5\n* at 7:10\nIdentifier(s1) at 7:11\n= at 7:14\nStringLiteral(\"hello\") at 7:16\n; at 7:23\nIdentifier(printf) at 8:5\n( at 8:11\nStringLiteral(\"%s\n\") at 8:12\n, at 8:18\nIdentifier(s1) at 8:20\n) at 8:22\n; at 8:23\nchar at 11:5\n* at 11:10\nIdentifier(s2) at 11:11\n= at 11:14\nStringLiteral(\"hello world\") at 11:16\n; at 11:29\nIdentifier(printf) at 12:5\n( at 12:11\nStringLiteral(\"%s\n\") at 12:12\n, at 12:18\nIdentifier(s2) at 12:20\n) at 12:22\n; at 12:23\nchar at 15:5\n* at 15:10\nIdentifier(s3) at 15:11\n= at 15:14\nStringLiteral(\"123\") at 15:16\n; at 15:21\nIdentifier(printf) at 16:5\n( at 16:11\nStringLiteral(\"%s\n\") at 16:12\n, at 16:18\nIdentifier(s3) at 16:20\n) at 16:22\n; at 16:23\nchar at 19:5\n* at 19:10\nIdentifier(s4) at 19:11\n= at 19:14\nStringLiteral(\"1 + 2\") at 19:16\n; at 19:23\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s\n\") at 20:12\n, at 20:18\nIdentifier(s4) at 20:20\n) at 20:22\n; at 20:23\nreturn at 22:5\nIntLiteral(0, None) at 22:12\n; at 22:13\n} at 23:1\nEOF at 24:1\n"
stderr: ""
status: 0
