tests/snapshots/tokenize__struct_designated_mixed.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "struct at 3:1\nIdentifier(Data) at 3:8\n{ at 3:13\nint at 4:5\nIdentifier(a) at 4:9\n; at 4:10\nint at 5:5\nIdentifier(b) at 5:9\n; at 5:10\nint at 6:5\nIdentifier(c) at 6:9\n; at 6:10\n} at 7:1\n; at 7:2\nint at 9:1\nIdentifier(main) at 9:5\n( at 9:9\n) at 9:10\n{ at 9:12\nstruct at 11:5\nIdentifier(Data) at 11:12\nIdentifier(d) at 11:17\n= at 11:19\n{ at 11:21\nIntLiteral(5, None) at 11:22\n, at 11:23\n. at 11:25\nIdentifier(c) at 11:26\n= at 11:28\nIntLiteral(15, None) at 11:30\n} at 11:32\n; at 11:33\nreturn at 12:5\nIdentifier(d) at 12:12\n. at 12:13\nIdentifier(a) at 12:14\n+ at 12:16\nIdentifier(d) at 12:18\n. at 12:19\nIdentifier(c) at 12:20\n; at 12:21\n} at 13:1\nEOF at 14:1\n"
stderr: ""
status: 0
